INCLUDES = -I$(top_srcdir)/include ${BLITZ_INCLUDE}

lib_LTLIBRARIES = libnuosc++.la

libnuosc___la_SOURCES = \
	NuEvolver.cc \
	NuEvolverConstant.cc \
	NuEvolverPrem.cc \
	NuEvolverVacuum.cc \
	OdeFunc.cc \
	OscParam.cc \
	constants.cc \
	fp.cc \
	matrix.cc \
	nuosc_earth.cc \
	nuosc_matrix.cc \
	nuosc_prob.cc

